# my-first-project

./: Makefile  pyproject.toml  ruff.tomi
VD_games/games/: calc.py  engine.py  gcd.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py
my_first_project.egg-info/: PKG-INFO  SOURCES.txt
